--- a/src/views/pages/home.hbs
+++ b/src/views/pages/home.hbs
@@ -32,7 +32,7 @@
                             <span>phim / cụm rạp</span>
                         </li>
                         <li>
-                            <span>tất cả phim / rạp</span>
+                            <span>rạp / cụm rạp</span>
                         </li>
                     </ul>
                 </div>
