--- a/src/views/pages/movie.hbs
+++ b/src/views/pages/movie.hbs
@@ -36,7 +36,7 @@
                             <img src="/images/movie/icon/director.png" alt="director" />
                         </div>
                         <p>
-                            <b>đạo diễn:</b> {{movie.director}}
+                            <b>Đạo diễn:</b> {{movie.director}}
                         </p>
                     </div>
                 </div>
@@ -45,7 +45,7 @@
                         <div class="thumb">
                             <img src="/images/movie/icon/country.png" alt="country" />
                         </div>
-                        <p><b>quốc gia:</b> {{movie.country}}</p>
+                        <p><b>Quốc gia:</b> {{movie.country}}</p>
                     </div>
                 </div>
             </div>
@@ -113,7 +113,8 @@
                                                                         <i class="fas fa-video"></i>
                                                                         <i>{{this.RoomType.name}}</i>
                                                                     </div>
-                                                                    <a class="name">{{this.name}}</a>
+                                                                    <a href="/cinema/{{../cinema.unsignedName}}?room={{this.id}}"
+                                                                        class="name">{{this.name}}</a>
                                                                 </div>
                                                                 <div class="movie-schedule">
                                                                     {{#each this.ShowTimes}}
