--- a/src/views/pages/all.hbs
+++ b/src/views/pages/all.hbs
@@ -45,7 +45,7 @@
                             </div>
                         {{else}}
                             <div class="col-lg-12">
-                                <p style="text-align: center;">không tìm thấy dữ liệu.</p>
+                                <p style="text-align: center;">không có dữ liệu.</p>
                             </div>
                         {{/if}}
                     </div>
